build: enable graal tests (#1242)